Add role-based admin middleware and update attendance, routes, app.js for Admin-only access

--- a/hrm-backend-app/.env.example
+++ b/hrm-backend-app/.env.example
@@ -1,8 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:XhceVu/8H+ay/sQMTZUpeolewJI98v7Pf3spnRHRc3Y=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
+
+APP_TIMEZONE=Asia/Dhaka
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,9 +26,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hrm_backend_app
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=hrm_backend_db
+DB_USERNAME=phpmyadmin
+DB_PASSWORD=Mamun@pw123
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
